Bug 1875995 Inbox subject wrap responsively
Changing Inbox block message subjects to not wrap and just hide
overflow when in smaller widths.

behatnotneeded

--- a/htdocs/theme/raw/sass/components/_list-group.scss
+++ b/htdocs/theme/raw/sass/components/_list-group.scss
@@ -380,3 +380,18 @@
         margin: 5px 0;
     }
 }
+
+// Inbox subject to not wrap responsively
+.inboxblock {
+    .icon.left {
+        display: inline-block;
+        vertical-align: text-top;
+    }
+    .subject {
+        display: inline-block;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 80%;
+        white-space: nowrap;
+    }
+}
